# aws-instance-metadata-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
