[package]
name = "aws_instance_metadata"
version = "0.1.0"
authors = ["Zac Brown <zacbrown@users.noreply.github.com>"]
edition = "2018"
description = "A crate for fetching AWS instance metadata."
homepage = "https://github.com/zacbrown/aws-instance-metadata-rs/"
repository = "https://github.com/zacbrown/aws-instance-metadata-rs/"
license-file = "LICENSE"

[dependencies]
json = "0.12"
ureq = "0.12"
